--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -175,5 +175,6 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8"
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "clangd.arguments": ["--compile-commands-dir=${workspaceFolder}/out/debug"]
 }
