nu120: add DBus signal and method call
Signed-off-by: Inho Oh <inho.oh@sk.com>

--- a/examples/lighting-app/lighting-common/BUILD.gn
+++ b/examples/lighting-app/lighting-common/BUILD.gn
@@ -34,9 +34,14 @@ source_set("color-format") {
   ]
 }
 
+import("${chip_root}/build/chip/linux/gdbus_library.gni")
+
 source_set("lighting-manager") {
+  defines = [
+    "CHIP_DEVICE_CONFIG_ENABLE_DBUS=1"
+  ]
   deps = [ "${chip_root}/src/lib" ]
-  public_configs = [ ":config" ]
+  public_configs = [ ":config", glib_config ]
   sources = [
     "include/LightingManager.h",
     "src/LightingManager.cpp",
